test/expected/explain_xif_i.out
explain constinit int f()
                      ^
23: error: function can not be "constinit"
